--- a/00_introduction.qmd
+++ b/00_introduction.qmd
@@ -1,8 +1,8 @@
-.docname {gwater}
+.docname {introduction}
 .doctype {slides}
 .doclang {English}
-.theme {paperwhite}
-.slides transition:{zoom}
+.theme {paperwhite} layout:{beamer}
+.slides transition:{fade}
 .docauthors
   - Sia Ghelichkhan
 
@@ -12,7 +12,7 @@
 #!
 .fullspan
   .center
-    ![Logo](/Users/sghelichkhani/Workplace/teaching/gwater/image/logo.png)
+    ![Logo](image/new_logo.png)
 
     ---
     #! Remote Sensing of Water Resources
@@ -21,100 +21,90 @@
 
     ###! _Dr. Sia Ghelichkhan, Prof. Paul Tregoning_
 
-#!
-.tableofcontents
+# Course Objectives
+.align{center}
+  .container width:{80%}
+    .box title:{What is this course about} background:{.lightblue}
+        - Demonstrate an understanding of the different components of water in the landscape and how they interact.
+        - Undertake quantitative analysis and interpretation of actual data related to water in Australia.
+        - Understand a variety of remote sensing satellite missions and how the observations inform water research.
+        - Critically evaluate technical reports and journal articles.
+        - Synthesise key concepts in hydrology and/or remote sensing to understand changes in water resources.
 
-# What is the course about?
-.var {boxtext}
-    - To know something about components of the water cycle
-    - To understand **something** about how we can quantify changes in water resources
-    - To know where and how to find scientific information from the original source
-    - To be able to make an informed opinion based on scientific information
-
-.box {Learning outcomes} type:{Note}
-    .boxtext
-
-
-# Horizontal
-.row alignment:{spacebetween}
-
-  .container
-    ##! This ia  formal tes
-
-  .container
-    .float {end}
-      !(50%)[Logo](/Users/sghelichkhani/Workplace/teaching/gwater/image/logo.png)
-
-# Assessments
-##! How is the course going to be assessed?
-
-|Assessment| |
-|------ | ---- |
-|Assignments |	40%|
-|Oral presentation|	10%|
-|Written critique | 10%|
-|Exam | 40%|
-
-##
-.row alignment:{spacearound}
-	.row
-		Left
-
-		##! Title
-
-		Right
-
-	---
-
-	.column cross:{start}
-		Top
-
-		##! Title
-
-		Bottom
+# Structure of the course
+_Note: The actual content might change depending on our pace_
+| Week          | Topic                                                  | Activities                                                                                      |
+|---------------|--------------------------------------------------------|--------------------------------------------------------------------------------------------------|
+| 1  | Introduction | An introduction to the course, global and regional water cycle |
+| 2  | Water Cycle -- Precipitation and Evapotranspiration | An overview of the principles of precipitation and evaporation as processes                      |
+| 3  | Water Cycle -- Run off  | An overview of the storage component of the water cycle that might appear as run-off             |
+| 4  | Water Geodesy -- Introduction and Measuring Precipitation Remotely | **By Prof. Paul Tregoning** -- Looking into foundations of satellite geodesy and how it can estimate precipitation |
+| 5  | Water Geodesy -- Gravity and Surface Water observations | **By Prof. Paul Tregoning** -- Looking into estimates of gravitational change due to water movement |
+| 6  | Groundwater -- Principles of Groundwater | Looking into the foundations and principles of groundwater                                       |
+| 7  | Groundwater -- Aquifers | Looking in more detail into different aquifer systems                                            |
+| 8  | Groundwater -- Theory of Groundwater Flow | Looking into the physics and numerics of groundwater flow                                        |
+| 9  | Paper Critique  ||
+| 10 | Groundwater -- Geology and Hydrogeology               ||
+| 11 | Misc. and Course Revision                              ||
+| 12 | Exam                                                  ||
 
 
-#
+# Assessment
+## How is the course going to be assessed?
 
-.row alignment:{spacebetween} gap:{1cm}
-	.container
-		##! Container 1
+.row gap:{1cm}
+  .container width:{70%}
+    .mermaid
+      pie showData
+          "Assignments" : 40
+          "Paper Critique (Presentation)" : 10
+          "Paper Critique (Written)" : 20
+          "Exam" : 30
 
-		.loremipsum
+  .container width:{30%}
+    .align{end}
 
-	.container
-		##! Container 2
-
-		.loremipsum
-
-
-
-# Content
-What is this course all about?
-- The water cycle
-  - Groundwater, surface water, soil moisture, vegetation
-- Physics of groundwater
-- Quantifying changes in water resources through remote Sensing
-- Water futures and water policy
+      |Assessment| |
+      |:-----|----|
+      |Assignments |	40%|
+      |Oral presentation|	10%|
+      |Written critique | 20%|
+      |Exam | 30%|
 
 # Schedule
 
-  - Lectures Mon 9-10am, Wed 11am-12pm
-  - Tutorial Tue 12-1pm
-  - Computing Lab Thu 5pm – pm
+.align{center}
+  _EMSC3025 / EMSC6025 Timetable – Semester 2_
+  | Time  | Monday             | Wednesday          | Thursday            | Friday            |
+  |:------|--------------------|---------------------|--------------------|-------------------|
+  | 09–10 | Lec A, R1.02, J8   |                     |                    |                   |
+  | 11–12 |                    | Lec B, R1.02, J8    |                    |                   |
+  | 12–13 |                    |                     | TutA, R1.02, J8    |                   |
+  | 16–17 |                    |                     |                    | ComB, R1.02, J8   |
+  | 17–18 |                    |                     | ComA, R1.02, J8    |                   |
 
-  - Additional contact
-    - Email me to arrange a time
-    - Paul.Tregoning@anu.edu.au
-    - Building J3 room 150
+.row gap:{1cm}
+  .container width:{50%} alignment:{center}
+    Dr. Sia Ghelichkhan\
+    siavash.ghelichkhan@anu.edu.au\
+    Building J4 room L18\
+    _Anything except for the remote sensing module_
+
+  .container width:{50%} alignment:{center}
+    Prof. Paul Tregoning\
+    paul.tregoning@anu.edu.au\
+    Building J3 room 150
 
 # Course Organisation
-Tutorials:
-- Python examples
-- Explanation/revision of maths techniques
-- Sample exam-type questions
-- ==Tutorials explain how to do the assignments==
-
-Computing labs:
-- Students work on their computing assignments
-- Lecturer/demonstrator available to provide assistance
+.row gap:{1cm} alignment:{center}
+  .container width:{80%}
+    .box title:{Tutorials}
+      - Explanation/revision of maths techniques
+      - Sample exam-type questions
+      - Python examples
+      - Tutorials might explain how to do the assignments
+.row gap:{1cm} alignment:{center}
+  .container width:{80%}
+    .box title:{Comp Labs}
+      - Drop-in sessions to work on assignments.
+      - Demonstrator available to provide assistance
